PW-135: Fixed spacing and size of byline and fixed responsive subnavigation menu

--- a/web/app/themes/mitlib-news/style.css
+++ b/web/app/themes/mitlib-news/style.css
@@ -246,8 +246,12 @@ body.single-post h2.name-site, body.single-post h2.name-site a {
 	margin: 24px 0px 5px;
 }
 
+div.entry-meta {
+	padding-top: 8px;
+}
+
 .entry-meta .author, .entry-meta .date-post, .entry-meta .category-post-single {
-	font-size: 11px;
+	font-size: 13px;
 }
 .nextBtn {
 	display: -webkit-flex;
